--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap');
 @import "bootstrap";
+
+html{
+    scroll-behavior: smooth;
+}
