--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,3 +5,12 @@
 html{
     scroll-behavior: smooth;
 }
+
+#backbtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  .badge {
+    color: $primary;
+  }
+}
